# discrecontinual_equations

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
discrecontinual_equations/: DISCRECONTINUAL_EQUATIONS.md  __init__.py  curve.py  differential_equation.py  parameter.py  simple_ode_function.py  variable.py
discrecontinual_equations/function/: FUNCTION.md  deterministic.py  function.py  stochastic.py
discrecontinual_equations/plot/: PLOT.md  delay_plot.py  line_plot.py  phase_plot.py  spectrum_plot.py
discrecontinual_equations/solver/: SOLVER.md  solver.py  solver_config.py  state.py
discrecontinual_equations/solver/deterministic/: DETERMINISTIC.md  __init__.py
discrecontinual_equations/solver/deterministic/adams_bashforth2/: ADAMS_BASHFORTH2.md  adams_bashforth2_config.py  adams_bashforth2_solver.py
discrecontinual_equations/solver/deterministic/adams_bashforth3/: adams_bashforth3_config.py  adams_bashforth3_solver.py
discrecontinual_equations/solver/deterministic/cash_karp/: cash_karp_config.py  cash_karp_solver.py
discrecontinual_equations/solver/deterministic/dormand_prince/: dormand_prince_config.py  dormand_prince_solver.py
discrecontinual_equations/solver/deterministic/dormand_prince89/: dormand_prince89_config.py  dormand_prince89_solver.py
discrecontinual_equations/solver/deterministic/euler/: EULER.md  euler_config.py  euler_solver.py
discrecontinual_equations/solver/deterministic/fehlberg/: fehlberg_config.py  fehlberg_solver.py
discrecontinual_equations/solver/stochastic/: STOCHASTIC.md  __init__.py
discrecontinual_equations/solver/stochastic/euler_maruyama/: EULER_MARUYAMA.md  euler_maruyama_config.py  (+1 more)
docs/: index.md
docs/api/: core.md  deterministic-solvers.md  functions.md  plotting.md  stochastic-solvers.md
docs/development/: contributing.md  testing.md
docs/user-guide/: advanced-features.md  basic-usage.md  getting-started.md
examples/: README.md
examples/brownian_motion/: brownian_motion.py
examples/ccefs/: ccefs_example.py
examples/complex_ode_system/: complex_ode_example.py
examples/geometric_brownian_motion/: geometric_brownian_motion.py
examples/lorenz/: lorenz_equation.py
examples/quartic/: quartic_equation.py
examples/thaler/: thaler_example.py
examples/zhan_duan_li_li/: zhan_duan_li_li_example.py
site/: 404.html  objects.inv
site/api/core/: index.html
site/api/deterministic-solvers/: index.html
site/api/functions/: index.html
site/api/plotting/: index.html
site/api/stochastic-solvers/: index.html
site/development/contributing/: index.html
site/development/testing/: index.html
site/search/: search_index.json
site/user-guide/advanced-features/: index.html
site/user-guide/basic-usage/: index.html
site/user-guide/getting-started/: index.html
tests/: test_euler_solver.py  test_function.py  test_parameter.py  test_plot.py  test_simple_ode_function.py  test_variable.py
tests/solver/: test_solver_config.py
tests/solver/adams_bashforth2/: test_adams_bashforth2_solver.py
tests/solver/adams_bashforth3/: test_adams_bashforth3_solver.py
tests/solver/cash_karp/: test_cash_karp_solver.py
tests/solver/dormand_prince/: test_dormand_prince_solver.py
tests/solver/dormand_prince89/: test_dormand_prince89_solver.py
tests/solver/euler/: test_euler_solver.py
tests/solver/euler_maruyama/: test_euler_maruyama_solver.py
tests/solver/fehlberg/: test_fehlberg_solver.py
tests/solver/gottwald_melbourne/: __init__.py  test_gottwald_melbourne_solver.py
tests/solver/zhan_duan_li_li/: __init__.py  test_zhan_duan_li_li_solver.py
(+25 files in other folders)
